29 January 2008
+ Added parameter to delete function to prevent deletion of all user
  information.
+ Demographics loads itself above the extended class. Thanks verdon.

Version 1.0.0 -- 16 August 2007
----------------------------------
16 August 2007
+ Implemented patch 1773655 from Eloi George.

Version 0.1.0
--------------
4 April 2007
+ Updated language functions
+ Added German files

Version 0.0.2
--------------
19 February 2007
+ Moved and removed translate functions.

14 February 2007
+ Added translate functions