@@ -5,4 +5,4 @@ CREATE TABLE demographics (
   user_id int(11) NOT NULL default 0
 );
 
-CREATE INDEX user_id on demographics(user_id);
+CREATE UNIQUE INDEX user_id on demographics(user_id);
